fixed z-index bug

--- a/src/components/intro/Intro.scss
+++ b/src/components/intro/Intro.scss
@@ -69,7 +69,7 @@
           position: absolute;
           bottom: 0%;
           left: 60%;
-
+          z-index: 1;
           img {
             width: 80px;
             animation: arrowBounce 2s infinite;
